# magneto

./: CMakeLists.txt  COMAKE  README.md
conf/: log.conf  monitor.conf  normal.conf  services.conf
examples/: CMakeLists.txt  README.md
examples/broadcast/: COMAKE
examples/broadcast/conf/: log.conf
examples/broadcast/conf/agent/: normal.conf
examples/broadcast/conf/client/: normal.conf  services.conf
examples/broadcast/src/: broadcast.cpp
examples/cluster_agent/: COMAKE  Makefile
examples/cluster_agent/conf/agent/: services.conf
examples/cluster_agent/conf/minus_master/: monitor.conf
examples/cluster_agent/conf/plus_master/: normal.conf
examples/cluster_agent/conf/plus_slave/: normal.conf
examples/cluster_agent/src/: cluster_agent.cpp
examples/pb_protocol/conf/: log.conf
examples/pb_protocol/conf/confs_client/: normal.conf  services.conf
examples/pb_protocol/conf/confs_server/: normal.conf
examples/pb_protocol/src/: pb_protocol.cpp  sample.pb.cc
examples/pingpong/: COMAKE  Makefile
examples/pingpong/conf/confs_client/: services.conf
examples/pingpong/conf/confs_server/: normal.conf
examples/pingpong/src/: pingpong.cpp
examples/thrift_protocol/: Makefile
examples/thrift_protocol/conf/: log.conf
examples/thrift_protocol/conf/confs_client/: services.conf
examples/thrift_protocol/conf/confs_server/: normal.conf
examples/thrift_protocol/interface/: sample_proto.thrift
examples/thrift_protocol/src/: thrift_helper.h  thrift_protocol.cpp
examples/thrift_protocol/src/gen-cpp/: PingPongTest.cpp  PingPongTest.h  PingPongTest_server.skeleton.cpp  sample_proto_constants.cpp  sample_proto_constants.h  sample_proto_types.cpp  sample_proto_types.h
src/: biz_procedure.h  ctx_helper.h  error_no.h  event_ctx.h  handlers.h  local_limits.h  magneto.h  magneto_base.h  model.h  msg.h  public.h  public_model.h  session.h
src/agents/: agent_master.h  agent_slave.h  agents.h  mailbox_notifier.h  public.h
src/agents/details/: agent_master.cpp  agent_slave.cpp  agents.cpp  mailbox_notifier.cpp
src/confs/: conf_normal.h  conf_services.h  confs.h  public.h  versioned_conf_services.h
src/confs/details/: conf_normal.cpp  conf_services.cpp  confs.cpp  public.cpp  versioned_conf_services.cpp
src/conns_mgr/: conns_mgr.h  pool_conns_per_remote.h
src/conns_mgr/details/: conns_mgr.cpp  pool_conns_per_remote.cpp
src/details/: biz_procedure.cpp  magneto.cpp  magneto_base.cpp  model.cpp  msg.cpp  session.cpp
src/io_basic/: io_basic.h  public.h
src/io_basic/details/: io_basic.cpp
src/protocols/: pool_protocols.h  protocol.h  protocols.h
src/protocols/details/: pool_protocols.cpp  protocol.cpp
src/protocols/ping/: protocol_ping.h
src/protocols/ping/details/: protocol_ping.cpp
src/protocols/protobuf/: protocol_protobuf.h
src/protocols/protobuf/details/: protocol_protobuf.cpp
src/protocols/rapid/: protocol_rapid.h
src/protocols/rapid/details/: protocol_rapid.cpp
src/protocols/redis/: protocol_redis.h  redis_parser.h
src/protocols/redis/details/: protocol_redis.cpp  redis_parser.cpp
src/protocols/thrift/: protocol_thrift.h  t_simple_protocol.h
src/protocols/thrift/details/: protocol_thrift.cpp
src/public/: buffer.hpp  close_hashmap.hpp  common.h  delay_close_fds.hpp  delay_del_ptr.hpp  events_driver.hpp  gmonitor.h  io_helper.h  lock_policy.hpp  mem_profile.h  mp_tools.hpp  public.h  slice.hpp  thread_private_pool.hpp
src/public/details/: gmonitor.cpp  io_helper.cpp  mem_profile.cpp
src/public/heap/: heap.hpp
src/public/jsontype/: jsontype.h
src/public/mpsc_fixed_pipe/: default_notifier.h  mpsc_fixed_pipe.hpp
src/public/pool_objs/: pool_objs.hpp
src/public/thread_privacy/: thread_privacy.h
src/public/time/: time.h
src/schedulers/: scheduler.h  schedulers.h
src/schedulers/details/: scheduler.cpp  schedulers.cpp
tests/: CMakeLists.txt  COMAKE
tests/autotest/: driver.py
tests/autotest/env/pressure/: run_cases.py
tests/autotest/env/pressure/cases/: example.py
tests/conf/: log.conf  normal.conf  services.conf
tests/conf/magneto/test_broadcast/agent/: normal.conf  services.conf
tests/conf/magneto/test_cluster_agent/: log.conf
tests/conf/magneto/test_cluster_agent/minus_master/: normal.conf
tests/conf/magneto/test_cluster_agent/minus_slave/: normal.conf
tests/conf/magneto/test_pingpong/confs_client/: normal.conf
tests/data/: log1
tests/data/magneto/test_magneto/conf/: log.conf  normal.conf  services.conf
tests/data/magneto/test_pressure/conf/: normal.conf  services.conf
tests/data/test_conf_normals/: normal.conf  services.conf
tests/data/test_conf_services/: services.conf
tests/integration_tests/: build.sbt
tests/integration_tests/data/agent/: nohup.out
tests/integration_tests/data/agent/conf/: normal.conf
tests/integration_tests/data/service0/conf/: normal.conf
tests/integration_tests/src/main/resources/agent/: COMAKE  Makefile
tests/integration_tests/src/main/resources/agent/conf/: services.conf
tests/integration_tests/src/main/resources/agent/src/: main.cpp
tests/integration_tests/src/main/resources/service0/: COMAKE  Makefile
tests/integration_tests/src/main/resources/service0/conf/: log.conf
tests/integration_tests/src/main/resources/service1/: COMAKE  Makefile
tests/integration_tests/src/main/resources/service1/conf/: normal.conf
tests/integration_tests/src/main/resources/service1/src/: main.cpp
tests/integration_tests/src/main/scala/magneto_test/: Conf.scala  IOHelper.scala  Public.scala  Runall.scala  Test.scala  TestGeneral.scala
tests/src/: test_ctx_helper.cpp
tests/src/confs/: test_confs.cpp  test_public.cpp  test_reload_confs.cpp
tests/src/conns_mgr/: test_conns_mgr.cpp
tests/src/magneto/: test_broadcast.cpp  test_cluster_agent.cpp  test_magneto.cpp  test_pingpong.cpp  test_pressure.cpp
tests/src/protocols/: test_pool_protocols.cpp
tests/src/protocols/protobuf/: sample.pb.h  sample.proto  test_protobuf.cpp
tests/src/protocols/redis/: test_redis_parser.cpp
tests/src/public/: test_close_hashmap.cpp  test_io_helper.cpp
(+4 files in other folders)
